--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+        "dev:react": "pnpm --filter @ai-selector/react dev",
+        "dev:vue": "pnpm --filter @ai-selector/vue dev",
+        "build": "vite build"
     },
     "dependencies": {
+        "@ai-selector/core": "workspace:*",
+        "@ai-selector/react": "workspace:*",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
@@ -17,6 +20,7 @@
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
+        "typescript": "^5.3.0",
         "vite": "^6.0.5",
         "vite-plugin-svgr": "^4.5.0"
     }
