--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -28,6 +28,9 @@
     "references": [
         {
             "path": "../core"
+        },
+        {
+            "path": "./tsconfig.node.json"
         }
     ]
 }
