--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ai-selector/core",
+    "name": "@tombcato/ai-selector-core",
     "version": "0.1.0",
     "description": "Framework-agnostic AI Provider Selector core utilities",
     "type": "module",
