feat: enable i18n, optimize build process for demos, and update styling paths

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -36,7 +36,7 @@
     },
     "scripts": {
         "build": "vite build && vue-tsc --emitDeclarationOnly --declaration",
-        "build:demo": "vite build",
+        "build:demo": "vite build -c vite.demo.config.ts",
         "dev": "vite"
     }
 }
