--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,10 +7,8 @@
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "exports": {
-        ".": {
-            "import": "./dist/index.js",
-            "types": "./dist/index.d.ts"
-        }
+        ".": "./dist/index.js",
+        "./styles.css": "./src/styles.css"
     },
     "files": [
         "dist",
