--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tombcato/ai-selector-vue",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Vue adapter for AI Provider Selector",
     "type": "module",
     "main": "./dist/index.js",
@@ -16,7 +16,7 @@
     "exports": {
         ".": {
             "import": "./dist/index.js",
-            "require": "./dist/index.umd.cjs",
+            "require": "./dist/index.umd.js",
             "types": "./dist/index.d.ts"
         },
         "./style.css": "./dist/index.css"
