--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tombcato/ai-selector-core",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "Framework-agnostic AI Provider Selector core utilities",
     "type": "module",
     "main": "./dist/index.js",
@@ -15,11 +15,13 @@
         "src"
     ],
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc --watch"
+        "build": "vite build",
+        "dev": "vite build --watch"
     },
     "devDependencies": {
-        "typescript": "^5.3.0"
+        "typescript": "^5.3.0",
+        "vite": "^6.4.1",
+        "vite-plugin-dts": "^3.9.1"
     },
     "keywords": [
         "ai",
