--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tombcato/ai-selector-core",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "Framework-agnostic AI Provider Selector core utilities",
     "type": "module",
     "main": "./dist/index.js",
@@ -19,6 +19,7 @@
         "dev": "vite build --watch"
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.2.2",
         "typescript": "^5.3.0",
         "vite": "^6.4.1",
         "vite-plugin-dts": "^3.9.1"
@@ -32,5 +33,8 @@
         "deepseek",
         "selector"
     ],
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "crypto-js": "^4.2.0"
+    }
 }
